--- a/index.html
+++ b/index.html
@@ -1,92 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Daedalus</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
 <header>
 
+    <div id="navigation">
+        <a href="#description">Description</a>
+        <a href="#avis">Avis</a>
+        <a href="#video">Vidéo</a>
+        <img src="img/Minotaur_Daedalus_blanc.png" width="125px" height="125px">
+        <a href="https://github.com/zelytra/Daedalus">GitHub</a>
+        <a href="https://github.com/zelytra/Daedalus/wiki">Wiki</a>
+        <a href="http://daedalus.zelytra.fr">Discord</a>
+    </div>
+
+    <div id="firstContent">
+        <div class="title">
+            <h1>DAEDALUS</h1>
+            <h2>A minecraft mini game lorem ipsum lorem ipsum lorem ipsum lorem ipsum</h2>
+        </div>
+        <img src="img/Minotaur_Pixel_Art_noir.png" width="400px" height="400px">
+    </div>
+
 </header>
 <main>
-    <div id="description">
-        <div class="textContent">
-            <img src="img/msaze.png">
 
-            <div class="content">
-                <h1>Un labyrinthe généré aléatoirement</h1>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                    classical
-                    Latin
-                    literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
-                    Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from
-                    a
-                    Lorem
-                    Ipsum passage, and going through the cites of the word in classical literature, discovered the
-                    undoubtable
-                    source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The
-                    Extremes
-                    of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very
-                    popular
-                    during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a
-                    line
-                    in
-                    section 1.10.32.</p>
-            </div>
-
-        </div>
-        <div class="textContent">
-
-
-            <div class="content">
-                <h1>Un labyrinthe généré aléatoirement</h1>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                    classical
-                    Latin
-                    literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
-                    Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from
-                    a
-
-                    during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a
-                    line
-                    in
-                    section 1.10.32.</p>
-            </div>
-            <img src="img/poseisdon.png">
-
-        </div>
-    </div>
-    <div id="citationContainer">
-
-        <div class="citation">
-            <div class="title">
-                <h2>uiytt <b>/ Minecraft Beta Testing Player</b></h2>
-                <img src="img/quote.png" width="24" height="24">
-            </div>
-            <p>C'était incroyable, l'opposition Dieux/Minotaure change vraiment des games habituelles et y'a une bonne
-                idée
-                où on se sent réellement traqué ce qui est trop bien comme sentiment !!
-            </p>
-        </div>
-        <div class="citation">
-            <div class="title">
-                <h2>Spirit <b>/ Project Director</b></h2>
-                <img src="img/quote.png" width="24" height="24">
-            </div>
-            <p>Original et innovant, Daedalus propose un mode de jeu dynamique et équilibré en pleine immersion dans la
-                Grèce Antique et le mythique labyrinthe du Minotaure !</p>
-        </div>
-
-        <div class="citation">
-            <div class="title">
-                <h2>Nicolas61x <b>/ Project Contributor</b></h2>
-                <img src="img/quote.png" width="24" height="24">
-            </div>
-            <p>42.</p>
-        </div>
-
-    </div>
 
 </main>
 <footer>
