Add description and advise part

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Daedalus</title>
     <link rel="stylesheet" href="index.css">
+
 </head>
 <body>
 <header>
@@ -12,23 +13,142 @@
         <a href="#description">Description</a>
         <a href="#avis">Avis</a>
         <a href="#video">Vidéo</a>
-        <img src="img/Minotaur_Daedalus_blanc.png" width="125px" height="125px">
+        <img src="img/Minotaur_Daedalus_blanc.png" width="125px" height="125px" alt="logo">
         <a href="https://github.com/zelytra/Daedalus">GitHub</a>
         <a href="https://github.com/zelytra/Daedalus/wiki">Wiki</a>
         <a href="http://daedalus.zelytra.fr">Discord</a>
     </div>
 
+
+</header>
+<main>
     <div id="firstContent">
         <div class="title">
             <h1>DAEDALUS</h1>
             <h2>A minecraft mini game lorem ipsum lorem ipsum lorem ipsum lorem ipsum</h2>
         </div>
-        <img src="img/Minotaur_Pixel_Art_noir.png" width="400px" height="400px">
+        <img src="img/Minotaur_Pixel_Art_noir.png" width="400px" height="400px" alt="logo">
     </div>
 
-</header>
-<main>
+    <div id="description">
+        <h2>Description</h2>
+        <hr>
+        <div class="content">
+            <div class="subContent">
+                <div class="textContent">
+                    <h3>Un labyrinthe généré aléatoirement</h3>
+                    <p>Seuls les spawns des joueurs sont à des endroits fixes, ainsi que trois mines et une île de Circé
+                        (structure pour avoir de la nourriture) proche de chaque spawn.
+                        Le reste du labyrinthe est généré totalement aléatoirement, chaque temple, chaque donjon, chaque
+                        mine (autres que celles proches des spawns), pouvant apparaître n'importe où.
+                        Vous l'avez compris, chaque partie sera unique et les joueurs les plus explorateurs seront
+                        récompensés !</p>
+                </div>
+                <img src="img/maze.png" width="600" height="750" style="object-fit: cover">
+            </div>
+        </div>
+        <div class="content" style="background-color: #E5E5E5">
+            <div class="subContent">
+                <img src="img/maze.png" width="600" height="750" style="object-fit: cover">
+                <div class="textContent" style="margin-left: 100px; margin-right: 0px;">
+                    <h3>Un labyrinthe généré aléatoirement</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et
+                        dolore magna aliqua. Mattis vulputate enim nulla aliquet porttitor lacus. Sed id semper risus in
+                        hendrerit. Quam id leo in vitae turpis. Scelerisque varius morbi enim nunc faucibus a
+                        pellentesque
+                        sit
+                        amet. Massa vitae tortor condimentum lacinia quis vel. Amet nisl suscipit adipiscing bibendum
+                        est.
+                        Felis
+                        donec et odio pellentesque diam volutpat. Id velit ut tortor pretium viverra suspendisse
+                        potenti.
+                        Urna
+                        nec tincidunt praesent semper feugiat nibh sed. Ac turpis egestas integer eget aliquet nibh
+                        praesent
+                        tristique magna. Dui faucibus in ornare quam viverra. Morbi tincidunt augue interdum velit
+                        euismod.
+                        Vel
+                        elit scelerisque mauris pellentesque pulvinar</p>
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            <div class="subContent">
+                <div class="textContent">
+                    <h3>Un labyrinthe généré aléatoirement</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et
+                        dolore magna aliqua. Mattis vulputate enim nulla aliquet porttitor lacus. Sed id semper risus in
+                        hendrerit. Quam id leo in vitae turpis. Scelerisque varius morbi enim nunc faucibus a
+                        pellentesque
+                        sit
+                        amet. Massa vitae tortor condimentum lacinia quis vel. Amet nisl suscipit adipiscing bibendum
+                        est.
+                        Felis
+                        donec et odio pellentesque diam volutpat. Id velit ut tortor pretium viverra suspendisse
+                        potenti.
+                        Urna
+                        nec tincidunt praesent semper feugiat nibh sed. Ac turpis egestas integer eget aliquet nibh
+                        praesent
+                        tristique magna. Dui faucibus in ornare quam viverra. Morbi tincidunt augue interdum velit
+                        euismod.
+                        Vel
+                        elit scelerisque mauris pellentesque pulvinar</p>
+                </div>
+                <img src="img/maze.png" width="600" height="750" style="object-fit: cover">
+            </div>
+        </div>
 
+    </div>
+
+    <div id="rating" style="background-color: #E5E5E5">
+        <div class="ratingContent">
+            <div class="block">
+                <h4>32</h4>
+                <p>Contributeurs</p>
+            </div>
+            <div class="block">
+                <img src="img/rating.png" width="420px" height="80px" alt="src">
+                <p>Vote Spigot</p>
+            </div>
+            <div class="block">
+                <h4>110</h4>
+                <p>Membres</p>
+            </div>
+        </div>
+    </div>
+
+    <div id="openSource">
+        <img src="img/github.svg" width="200px">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Mattis vulputate enim nulla aliquet porttitor lacus. Sed id semper risus in hendrerit. </p>
+    </div>
+
+    <div id="avis" style="background-color: #E5E5E5">
+        <h2>Avis</h2>
+        <hr>
+        <div id="avisContainer">
+            <p class="arrow"><</p>
+            <div class="block">
+                <div class="title">
+                    <h5>Zelytra / Developer</h5>
+                    <img src="img/quote.png"width="65px" height="65px">
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Mattis vulputate enim nulla aliquet porttitor lacus. </p>
+            </div>
+            <p class="arrow">></p>
+        </div>
+        <div id="avisBar">
+
+        </div>
+    </div>
+    <div id="video">
+
+    </div>
 
 </main>
 <footer>
