Fix text and redirect link

--- a/404.html
+++ b/404.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Daedalus 404</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="icon" type="image/png" href="img/Logo_Daedalus.png"/>
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" media='screen and (min-width: 576px)' href="index_576.css"/>
+    <link rel="stylesheet" media='screen and (min-width: 768px)' href="index_768.css"/>
+    <link rel="stylesheet" media='screen and (min-width: 992px)' href="index_992.css"/>
+    <link rel="stylesheet" media='screen and (min-width: 1600px)' href="index_1200.css"/>
+    <link rel="icon" type="image/png" href="img/Minotaur_Daedalus_blanc.png"/>
 </head>
 <body>
 <header>
     <div id="navigation">
-        <a href="index.html">
+        <a href="http://mc-daedalus.com">
             <img src="img/Minotaur_Daedalus_blanc.png" width="125px" height="125px" border="" alt="logo">
         </a>
     </div>
