--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <header>
     <div id="navigationWrapper" class="navigation_top">
         <div id="navigation" class="navigation_top">
-            <a href="#firstContent"><img src="img/Minotaur_Daedalus_blanc.png" id="logoHeader" alt="logoHeader"></a>
+            <a href="#"><img src="img/Minotaur_Daedalus_blanc.png" id="logoHeader" alt="logoHeader"></a>
             <a href="#description" class="nav-link">Description</a>
             <a href="#download" class="nav-link">Téléchargement</a>
             <a href="#video" class="nav-link">Vidéo</a>
@@ -72,7 +72,7 @@
                     <p>Prenez place dans le labyrinthe de Dédale !
                         Parmi les murs d'une surface de 1000 blocs carrés, vous trouverez différentes structures
                         générées aléatoirement pour rendre votre exploration agréable et intéressante !
-                        Bien nombreuses ont celles qui vous attendent, non seulement des mines et des îles de Circé,
+                        Bien nombreuses sont celles qui vous attendent, non seulement des mines et des îles de Circé,
                         mais encore des donjons et des temples. Chaque structure faite à la main sera directement
                         reconnaissable.
                         Les temples sont ainsi décorés de manière à rappeler le Dieu auquel son culte est voué. De même,
@@ -102,11 +102,11 @@
                         Par exemple, Dionysos inflige nausée aux adversaires et son équipe obtient un bonus aléatoire
                         (effet de potion) pour décimer ses adversaires ! Ou encore Poséidon fera pleuvoir des tridents
                         sur ses ennemis, et Zeus de puissants éclairs !
-                        Néanmoins, il vous faudra vaincre le féroce Gardien du temple pour accéder à ce pouvoir.
-                        Une fois le dieu invoqué, vous pouvez être localisés par les autres équipes via le Divine
-                        Tracker, item custom permettant initialement de pointer vers les temples.
-                        Ces dieux vous aideront à combattre la puissante équipe du Minotaure, présent d'entrée de jeu,
-                        redoutable grâce à sa vie plus importante ou encore sa charge contre les ennemis !</p>
+                        Néanmoins, il vous faudra vaincre le féroce gardien du temple pour accéder à ce pouvoir.
+                        Une fois le dieu invoqué, vous pouvez être localisés par les autres équipes via le "divine
+                        tracker", item custom permettant initialement de pointer vers les temples.
+                        Ces dieux vous aideront à combattre la puissante équipe du Minotaure, "divinité" présente
+                        d'entrée de jeu, redoutable grâce à sa résistance ou encore sa charge contre les ennemis !</p>
                 </div>
             </div>
         </div>
@@ -117,16 +117,16 @@
                     <p>Finie la survie minage sans trouver de cavernes !
                         Grâce à des loot tables propres à chaque structure, vous trouverez de quoi vous équiper pour
                         démarrer efficacement votre survie.
-                        Puis trois mines à ciel ouvert avec respawns de minerais vous attendent proches de votre spawn,
+                        Puis trois mines à ciel ouvert avec respawn de minerais vous attendent proches de votre base,
                         ainsi qu'une île de Circé qui vous fournira de quoi vous sustenter (pauvres marins d'Ulysse !).
                         Dans le labyrinthe, de nombreux mobs hostiles rodent, mais les plus terribles sont ceux des
                         donjons !
-                        Sur 4 étages, 4 niveaux de mobs customisés de plus en plus durs vous attendent, avec bon stuff,
-                        xp et netherite à la clef !
+                        Sur 4 étages, 4 niveaux de mobs customisés de plus en plus féroces vous attendent, avec bon
+                        stuff, xp et netherite à la clef !
                         En bref, Daedalus propose un départ rapide et équilibré puis une exploration rentable pour
-                        forger vos meilleurs armes !</p>
+                        forger vos meilleures armes !</p>
                 </div>
-                <img src="img/maze.jpg" width="600" height="750" style="object-fit: cover">
+                <img src="img/dungeon.jpg" width="600" height="750" style="object-fit: cover">
             </div>
         </div>
 
@@ -151,8 +151,8 @@
 
     <div id="openSource">
         <img src="img/github.svg" width="200px">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Mattis vulputate enim nulla aliquet porttitor lacus. Sed id semper risus in hendrerit. </p>
+        <p>Daedalus est un projet open-source et communautaire, afin que tout le monde puisse jouer dessus et proposer
+            publiquement des améliorations.</p>
     </div>
 
     <div id="download" style="background-color: #E5E5E5">
@@ -187,7 +187,7 @@
             <p>Spirit</p>
             <p>Ichabodt</p>
         </div>
-        <a href="#navigation"><img src="img/Minotaur_Daedalus_blanc.png" width="295px"></a>
+        <a href="#"><img src="img/Minotaur_Daedalus_blanc.png" width="295px"></a>
         <div class="rightContent"></a>
             <a href="http://discord.mc-daedalus.com" target="_blank">Discord</a>
             <a href="http://spigot.mc-daedalus.com" target="_blank">Spigot</a>
