--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
         <h2>Téléchargement</h2>
         <hr>
         <div id="downloadBlock">
-            <a href="https://github.com/zelytra/Daedalus/releases/download/0.8/Daedalus-1.0.jar">
-                <p>Daedalus-0.8.java</p>
+            <a href="https://github.com/zelytra/Daedalus/releases/download/BETA-06/Daedalus-BETA-06.jar">
+                <p>Daedalus-BETA-06.java</p>
                 <img src="img/download.svg" width="110px" loading="lazy">
             </a>
         </div>
@@ -169,7 +169,7 @@
         <h2>Vidéo</h2>
         <hr>
         <div class="videoBlock">
-            <iframe width="2032" height="879" src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+            <iframe width="2032" height="879" src="https://www.youtube.com/embed/V2xnb4OkeoA"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen loading="lazy"></iframe>
